--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <span>I have to begin with good wishes because every milestone we have achieved is because of your continued support and loyalty. Your patronage keeps our passion and drive for success alive.<br>
                             For this, on behalf of everyone at WEMA BANK, I say THANK YOU!</span><br>
                             <span>As we ‘Celebrate Service’ in line with this year’s theme, we will hand out gifts to the first customers that walk into any of our branches by 9:45 A.M from today, till Friday, October 7, 2022.</span><br>
-                            <span>More than just gifts, we will use this week to remind ourselves of the importance of delivering on our promises to you and breaking new grounds to better support and serve you.</span><br>
+                            <span>More than just gifts, we'll use this week to remind ourselves of the importance of delivering on our promises to you and breaking new grounds to better support and serve you.</span><br>
                             <span>We remain your leading innovative bank and commit to helping you reach your financial goals.</span><br>
 
                             <span>Keep being audacious.<br>
